[package]
name = "parser-aac"
version = "0.1.0"
edition = "2021"
description = "AAC codec parser (ADTS bitstream indexer)"

[[bin]]
name = "parser-aac"
path = "src/main.rs"

[dependencies]
videofuser-parser-common = { workspace = true }
videofuser-vfr           = { workspace = true }
clap                     = { workspace = true }
byteorder                = { workspace = true }
tracing                  = { workspace = true }
tracing-subscriber       = { workspace = true }
