[package]
name = "parser-av1"
version = "0.1.0"
edition = "2021"
description = "AV1 codec parser (OBU bitstream indexer)"

[[bin]]
name = "parser-av1"
path = "src/main.rs"

[dependencies]
videofuser-parser-common = { workspace = true }
videofuser-vfr           = { workspace = true }
clap                     = { workspace = true }
byteorder                = { workspace = true }
tracing                  = { workspace = true }
tracing-subscriber       = { workspace = true }
