[package]
name = "parser-truehd"
version = "0.1.0"
edition = "2021"
description = "Dolby TrueHD codec parser (bitstream indexer)"

[[bin]]
name = "parser-truehd"
path = "src/main.rs"

[dependencies]
videofuser-parser-common = { workspace = true }
videofuser-vfr           = { workspace = true }
clap                     = { workspace = true }
byteorder                = { workspace = true }
tracing                  = { workspace = true }
tracing-subscriber       = { workspace = true }
